force-app/main/default/objects/Budget_Admin_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Item__c</fullName>
        <label>Cost Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing and PR Events</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>School cars</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Bank costs</fullName>
                </value>
                <value>
                    <fullName>Phone, internet &amp; post</fullName>
                </value>
                <value>
                    <fullName>Office expenses</fullName>
                </value>
                <value>
                    <fullName>Staff Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_for_School__c</fullName>
        <label>Cost for School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_Budget__c</fullName>
        <label>School Budget</label>
        <referenceTo>School_Budget__c</referenceTo>
        <relationshipLabel>Budget - Administrative Cost</relationshipLabel>
        <relationshipName>Budget_Administrative_Cost</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Budget - Administrative Costs</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget - Administrative Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <description>Prevents New or Edits if the budget is Locked</description>
        <errorConditionFormula>TEXT(School_Budget__r.Locked__c) =&quot;Yes&quot;</errorConditionFormula>
        <errorMessage>This School Budget is Locked. Please contact the Group Administrator for Details</errorMessage>
    </validationRules>
</CustomObject>